Sync app with the latest ATLAS tooling (#5)
* Sync atlas-contacts-app with the latest atlas tooling

* Update README

* Update contacts.yaml

* Remove vendor
